# patina-rs

./: .gitignore  Cargo.toml
examples/drum/: Cargo.toml
examples/drum/src/: inner.rs  outer.rs
examples/face/: Cargo.toml  output.stl
examples/face/output/: face.stl  forward_difference.stl  intersect.stl  mesh1_inside.stl  mesh1_outside.stl  mesh2_inside.stl  mesh2_outside.stl  reverse_difference.stl  union.stl
examples/face/src/: main.rs
examples/flap/: .gitignore  Cargo.toml  filtered.3mf  input.3mf
examples/flap/src/: letter.rs  main.rs
examples/housing/: Cargo.toml
examples/housing/src/: main.rs
examples/yarn-holder/: Cargo.toml
examples/yarn-holder/src/: base.rs  consts.rs  post.rs
patina-3mf/: Cargo.toml
patina-3mf/src/: bool_as_int.rs  brim_points.rs  content_types.rs  filament_settings.rs  lib.rs  mesh.rs  model.rs  model_settings.rs  option_or_nil.rs  project_settings.rs  relationships.rs  vec_as_vec_string.rs  vec_bool_as_vec_int_string.rs  xmlns.rs
patina-3mf/src/custom_serde/: bool_from_int_string.rs  mod.rs
patina-3mf/src/custom_serde/map_struct/: de.rs  mod.rs  ser.rs  test.rs
patina-3mf/src/model/: build.rs  mesh.rs  mod.rs  resources.rs
patina-3mf/src/project_settings/: brim_type.rs  color.rs  mod.rs  support_interface_pattern.rs  support_style.rs  support_type.rs
patina-3mf/src/settings_id/: filament_settings_id.rs  mod.rs  nozzle.rs  print_settings_id.rs  printer.rs  printer_settings_id.rs
patina-bambu/: Cargo.toml
patina-bambu/src/: cli.rs  lib.rs  model.rs  test.rs
patina-bsp/: Cargo.toml
patina-bsp/src/: lib.rs
patina-cad/: Cargo.toml
patina-cad/src/: bvh.rs  lib.rs  sat.rs  stl.rs
patina-cad/src/geo2/: mod.rs  polygon2.rs  ray2.rs  segment2.rs  triangle2.rs
patina-cad/src/geo3/: aabb.rs  cylinder.rs  mod.rs  plane.rs  polygon3.rs  ray3.rs  segment3.rs  sphere.rs  triangle.rs  triangle3.rs
patina-cad/src/math/: disjoint_paths.rs  edmonds_karp.rs  edmonds_karp_vertex.rs  float_bool.rs  interval.rs  loop_builder.rs  mat2.rs  mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
patina-cad/src/meshes/: bimesh.rs  bimesh2.rs  bvh.rs  error.rs  intersect_bvh_bvh.rs  intersect_bvh_ray.rs  mesh.rs  mesh_edge.rs  mesh_polygon.rs  mesh_test.rs  mesh_triangle.rs  mod.rs  ordered_mesh_edge.rs  remove_empty_triangles.rs  simplify.rs  subdivision.rs  triangulation.rs
patina-cad/src/ser/: mod.rs  stl.rs
patina-cad/src/threemf/: mesh.rs  mod.rs  model.rs
patina-cad/src/util/: loop_builder.rs  mod.rs  sorted_pair.rs
patina-calc/: Cargo.toml
patina-calc/src/: bounded_term.rs  deep_equal.rs  derivative.rs  eval_visitor.rs  expr.rs  expr_context.rs  expr_evaluator.rs  expr_program.rs  lib.rs  memoize.rs  numeric.rs  operator.rs  program.rs  program_evaluator.rs  solve.rs  solver.rs  substitute.rs  term_context.rs  term_visitor.rs  test.rs
patina-calc/src/expr/: deep_equal.rs  expr_visit.rs  expr_visitor.rs  mod.rs
patina-calc/src/optimize/: bounded_term.rs  mod.rs  without_dead_code.rs
patina-calc/src/program/: expr_program.rs  mod.rs  program_visit.rs
patina-extrude/: Cargo.toml
patina-extrude/src/: lib.rs
patina-font/: Cargo.toml
patina-font/src/: lib.rs  test.rs
patina-geo/: Cargo.toml
patina-geo/src/: aabb.rs  lib.rs  ray.rs  segment2.rs  sphere.rs
patina-geo/src/geo1/: interval.rs
patina-geo/src/geo2/: aabb2.rs  mod.rs  polygon2.rs  ray2.rs  segment2.rs  triangle2.rs
patina-geo/src/geo3/: aabb.rs  aabb3.rs  basis_plane3.rs  cylinder.rs  mod.rs  plane.rs  ray3.rs  segment3.rs  sphere.rs  triangle3.rs
patina-mesh/: Cargo.toml
patina-mesh/src/: bimesh2.rs  decimate.rs  directed_mesh_edge.rs  edge_mesh2.rs  edge_table.rs  half_edge_mesh.rs  lib.rs  mesh.rs  mesh2.rs  mesh_cut.rs  mesh_edge.rs  mesh_geo.rs  mesh_triangle.rs  monotone_decomp.rs  trap_decomp.rs  tri_mesh2.rs  triangulation.rs
patina-mesh/src/bvh/: edge_bvh2.rs  mod.rs
patina-mesh/src/ser/: mod.rs  stl.rs  svg.rs
patina-mesh/src/util/: scan.rs
patina-progress/: Cargo.toml
patina-progress/src/: lib.rs
patina-scalar/: Cargo.toml
patina-scalar/src/: deriv.rs  impl_inari.rs  lib.rs  newton.rs
patina-sdf/: Cargo.toml
patina-sdf/src/: deriv.rs  exact.rs  geo.rs  lib.rs  marching.rs  marching_mesh.rs  octree.rs  progress.rs  sdf.rs  solver.rs  subdivide.rs  test.rs
patina-sdf/src/sdf/: aabb.rs  cylinder.rs  empty.rs  extrude.rs  invert.rs  leaf.rs  mod.rs  plane.rs  polygon.rs  rotate.rs  sphere.rs  transform.rs  triangle.rs  truncated_cone.rs  union.rs
patina-sdf/src/transvoxel/: cube_edge.rs  cube_face.rs  cube_input.rs  cube_tetr.rs  cube_triangle.rs  cube_vertex.rs  mod.rs  test.rs
patina-threads/: Cargo.toml
patina-threads/src/: lib.rs
patina-vec/: Cargo.toml
patina-vec/src/: impl_ref_binop.rs  lib.rs  mat.rs  mat2.rs  mat3.rs  mat4.rs  vec.rs  vec2.rs  vec3.rs  vec4.rs  vector3.rs
