[workspace]
resolver = "3"
members = [ "examples/face", "examples/flap", "patina-3mf", "patina-bambu","patina-cad", "patina-extrude", "patina-font",  "patina-geo", "patina-mesh", "patina-scalar", "patina-sdf", "patina-vec"]

[workspace.dependencies]
patina-cad = {path="patina-cad"}
patina-3mf = {path="patina-3mf"}
patina-bambu = {path = "patina-bambu"}
patina-vec={path="patina-vec"}
patina-geo = {path="patina-geo"}
patina-scalar= {path="patina-scalar"}
patina-mesh={path="patina-mesh"}
patina-sdf={path="patina-sdf"}
patina-extrude={path="patina-extrude"}
patina-font={path="patina-font"}