[workspace]
resolver = "3"
members = ["examples/drum", "examples/face", "examples/flap", "examples/housing", "patina-3mf", "patina-bambu", "patina-bsp","patina-cad", "patina-extrude", "patina-font",  "patina-geo", "patina-mesh", "patina-scalar", "patina-sdf", "patina-threads", "patina-vec"]

[workspace.dependencies]
patina-cad = {path="patina-cad"}
patina-3mf = {path="patina-3mf"}
patina-bambu = {path = "patina-bambu"}
patina-vec={path="patina-vec"}
patina-geo = {path="patina-geo"}
patina-scalar= {path="patina-scalar"}
patina-mesh={path="patina-mesh"}
patina-sdf={path="patina-sdf"}
patina-extrude={path="patina-extrude"}
patina-font={path="patina-font"}
patina-bsp={path="patina-bsp"}
patina-threads={path="patina-threads"}

[profile.release]
debug = true
