[package]
name = "patina-bambu"
version = "0.1.0"
edition = "2024"

[dependencies]
patina-3mf = {workspace = true}
anyhow = "1.0.98"
tokio = {version="1.45.1",features=["process","macros","rt"]}
itertools = "0.14.0"
patina-mesh={workspace = true}
patina-vec={workspace = true}
patina-geo = {workspace = true}
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
patina-threads = {workspace = true}
patina-sdf={workspace = true}