[package]
name = "patina-cad"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.45.1", features = ["io-util", "fs"] }
ordered-float = "5.0.0"
itertools = "0.14.0"
arrayvec = "0.7.6"
rand = "0.9.1"
rand_xorshift = "0.4.0"

[dev-dependencies]
tokio = {version="1.45.1", features = ["rt","macros"] }
anyhow = "1.0.98"
