[package]
name = "patina-mesh"
version = "0.1.0"
edition = "2024"

[dependencies]
patina-vec= {workspace = true}
patina-geo = {workspace = true}
itertools = "0.14.0"
tokio = {version="1.46.0",features=["io-util","fs"]}
arrayvec = "0.7.6"
ordered-float = "5.0.0"
rand_xorshift = "0.4.0"
rand = "0.9.1"
anyhow = "1.0.98"

[dev-dependencies]
tokio = {version = "1.46.0",features = ["rt","macros"]}