[package]
name = "patina-sdf"
version = "0.1.0"
edition = "2024"

[dependencies]
patina-geo = { workspace = true}
patina-vec= {workspace = true}
patina-scalar={workspace = true,features = ["inari"]}
patina-mesh={workspace = true}
itertools = "0.14.0"
arrayvec = "0.7.6"
anyhow = "1.0.98"
ordered-float = "5.0.0"
inari = "2.0.0"
rand = "0.9.1"

[dev-dependencies]
tokio = {version = "1.46.0", features=["macros","rt"]}
target-test-dir = "0.3.0"
