[package]
name = "patina-sdf"
version = "0.1.0"
edition = "2024"

[dependencies]
patina-geo = { workspace = true}
patina-vec= {workspace = true}
patina-scalar={workspace = true,features = ["inari"]}
patina-mesh={workspace = true}
itertools = "0.14.0"
arrayvec = "0.7.6"
anyhow = "1.0.98"
ordered-float = "5.0.0"
inari = "2.0.0"
rayon="1.10.0"
parking_lot = "0.12.4"

[dev-dependencies]
tokio = {version = "1.46.0", features=["macros","rt"]}
