[package]
name = "drum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "inner"
path = "src/inner.rs"

[[bin]]
name = "outer"
path = "src/outer.rs"

[dependencies]
patina-mesh={workspace = true}
patina-sdf={workspace = true}
patina-geo={workspace = true}
patina-vec={workspace = true}
patina-threads={workspace = true}
tokio={version = "1.47.1",features=["rt-multi-thread","macros"]}
anyhow = "1.0.98"