[package]
name = "flap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = {version="1.45.1",features = ["macros","rt-multi-thread","process","fs"]}
patina-3mf = {workspace = true}
patina-bambu = {workspace = true}
patina-sdf={workspace = true}
zip = "4.2.0"
rand = "0.9.1"
patina-vec={workspace = true}
patina-geo={workspace = true}
patina-mesh={workspace = true}
rusttype = "0.9.3"
patina-extrude = {workspace = true}
patina-font={workspace = true}